# src/controllers/user-controller.ts
@@ -1,8 +1,8 @@
 import { Body, Get, Security, Controller, Post, Route } from 'tsoa';
-import { RegisterUserRequest, User, UserIndex } from '../types/user';
-import { UserService } from '../services/user.services';
-import { registerValidations } from '../helpers/validations/register.validations';
-import { ErrorMessage } from '../types/session';
+import { UserService } from '@services/user-services';
+import { registerValidations } from '@helpers/validations/register-validations';
+import { RegisterUserRequest, User, UserIndex } from '@typing/user';
+import { ErrorMessage } from '@typing/session';
 
 @Route('users')
 export class UserController extends Controller {
@@ -12,7 +12,9 @@ export class UserController extends Controller {
    * @returns {User} 200 - User
    */
   @Post('/')
-  public async register(@Body() requestBody: RegisterUserRequest): Promise<User | ErrorMessage[]> {
+  public async register(
+    @Body() requestBody: RegisterUserRequest
+  ): Promise<User | ErrorMessage[]> {
     const errorsList = registerValidations(requestBody);
 
     if (errorsList.length) {
